Slideshow : When window is too wide, navigation should be visible. When window is too high, options should be visible. Fixes #10

--- a/src/plugins/Slide/style.scss
+++ b/src/plugins/Slide/style.scss
@@ -12,9 +12,6 @@
 	.th-slide {
 		--font-size: calc(100vw / (var(--th-slide-nlines) * var(--th-slide-ratio)));
 		font-size: var(--font-size);
-		@media screen and (min-aspect-ratio: 16 / 9) {
-			--font-size: calc(100vh / var(--th-slide-nlines));
-		}
 	}
 }
 .th-slide-backdrop {
